Updated the static HTML slightly, worked on making the RoomReservation model and view work together.

--- a/index.html
+++ b/index.html
@@ -137,12 +137,13 @@
 					<fieldset class="delete">Remove this Reservation</fieldset>
 				</fieldset>
 			</script>
-			<fieldset class="room-wrap add">click here</fieldset>
+			
 
 
 
 
 		</fieldset>
+		<fieldset id="add">click here</fieldset>
 	</form>
 
 
