Room Reservations can now collapse/expand and have a collapsed state. More structural changes.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
 					</fieldset>
 					<fieldset class="delete">Remove this Reservation</fieldset>
 				</fieldset>
+				<fieldset class="border hidden-view">
+					<span class="hidden-title"><%= hiddenName %></span>
+				</fieldset>
 			</script>
 			
 
@@ -137,7 +140,7 @@
 
 
 		</fieldset>
-		<fieldset id="add">click here</fieldset>
+		<fieldset id="add"><span>Click Here to Add a Room Reservation</span></fieldset>
 	</form>
 
 <script type="text/javascript" src="js/lib/jquery-1.7.2.min.js"></script>
