You can now remove Room Reservations as long as there is more than 1.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							<li><label><input type="radio" name="configuration" value="Workshop" />Workshop</label></li>
 						</ul>
 					</fieldset>
-					<fieldset class="delete">Remove this Reservation</fieldset>
+					<fieldset class="delete"><img src="img/delete.jpeg" alt="Delete Room Reservation" /></fieldset>
 				</fieldset>
 				<fieldset class="border hidden-view">
 					<span class="hidden-title"><%= hiddenName %></span>
