Changed the date picker to jQuery UI and it now works with any RoomReservations that are added to the page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Room Reservation - Test</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/datePicker.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui-1.8.22.custom.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     
@@ -147,8 +147,8 @@
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lib/underscore-min.js"></script>
     <script type="text/javascript" src="js/lib/backbone-min.js"></script>
-    <script type="text/javascript" src="js/lib/date.js"></script>
-    <script type="text/javascript" src="js/lib/jquery.datePicker.js"></script>
+    <!--<script type="text/javascript" src="js/lib/date.js"></script>//-->
+    <script type="text/javascript" src="js/lib/jquery-ui-1.8.22.custom.min.js"></script>
     <script type="text/javascript" src="js/RoomReservation.js"></script>
 	<script type="text/javascript" href="js/RoomReservation.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
