Cleaned up repo, added a .gitignore file, got rid of files no longer in use.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<fieldset class="delete"><img src="img/delete.jpeg" alt="Delete Room Reservation" /></fieldset>
 				</fieldset>
 				<fieldset class="border hidden-view">
-					<span class="hidden-title"><%= hiddenName %></span>
+					<span class="hidden-title"><%= hiddenTitle %></span>
 				</fieldset>
 			</script>
 			
@@ -147,7 +147,6 @@
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lib/underscore-min.js"></script>
     <script type="text/javascript" src="js/lib/backbone-min.js"></script>
-    <!--<script type="text/javascript" src="js/lib/date.js"></script>//-->
     <script type="text/javascript" src="js/lib/jquery-ui-1.8.22.custom.min.js"></script>
     <script type="text/javascript" src="js/RoomReservation.js"></script>
 	<script type="text/javascript" href="js/RoomReservation.js"></script>
