The RoomReservation Model now validates the times the user has chosen to make sure the 'From' is before 'Until'.

--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
 					<fieldset class="border room-names">
 						<legend>Available Rooms:</legend>
 						<ul>
-							<li><label class="tipp" title="But I really like the Wachovia one better.<br /><br /><i>Don't they need to change it to Wells Fargo now?"><input type="radio" name="<%= radioGroup %>-room-name" value="Wachovia" />Wachovia</label></li>
-							<li><label class="tipp" title="Something about Nortel A<br />Can we put line breaks?"><input type="radio" name="<%= radioGroup %>-room-name" value="Nortel A" />Nortel A</label></li>
-							<li><label class="tipp" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Nortel B" />Nortel B</label></li>
-							<li><label class="tipp" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Nortel A+B" />Nortel A + B</label></li>
-							<li><label class="tipp" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="BB&T" />BB&T</label></li>
-							<li><label class="tipp" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Discovery Classroom" />Discovery Classroom</label></li>
-							<li><label class="tipp" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Logan Conference Room 113" />Logan Conference Room 113</label></li>
-							<li><label class="tipp" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Conference Room 114" />Conference Room 114</label></li>
-							<li><label class="tipp" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Clark Board Room 117" />Clark Board Room 117</label></li>
-							<li><label class="tipp" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Conference Room 215A" />Conference Room 215A</label></li>
+							<li><label class="tipp dynamic wachovia" title="But I really like the Wachovia one better.<br /><br /><i>Don't they need to change it to Wells Fargo now?"><input type="radio" name="<%= radioGroup %>-room-name" value="Wachovia" />Wachovia</label></li>
+							<li><label class="tipp dynamic nortel-a" title="Something about Nortel A<br />Can we put line breaks?"><input type="radio" name="<%= radioGroup %>-room-name" value="Nortel A" />Nortel A</label></li>
+							<li><label class="tipp dynamic nortel-b" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Nortel B" />Nortel B</label></li>
+							<li><label class="tipp dynamic nortel-a-b" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Nortel A+B" />Nortel A + B</label></li>
+							<li><label class="tipp dynamic bb-t" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="BB&T" />BB&T</label></li>
+							<li><label class="tipp dynamic discovery-classroom" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Discovery Classroom" />Discovery Classroom</label></li>
+							<li><label class="tipp dynamic logan-conf" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Logan Conference Room 113" />Logan Conference Room 113</label></li>
+							<li><label class="tipp dynamic conf-room-114" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Conference Room 114" />Conference Room 114</label></li>
+							<li><label class="tipp dynamic clark-room-117" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Clark Board Room 117" />Clark Board Room 117</label></li>
+							<li><label class="tipp dynamic conf-room-215a" title="Nortel B is an awesome room"><input type="radio" name="<%= radioGroup %>-room-name" value="Conference Room 215A" />Conference Room 215A</label></li>
 						</ul>
 					</fieldset>
 					<br />
